# hephae-forge

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  404.html  ADMIN_APP_API.md  ADMIN_UI_CAPABILITY_REVIEW.md  ADVANCED_AGENT_PATTERNS.md  AGENT_DESIGN_REVIEW.md  BACKGROUND_RESEARCH_STRATEGY.md  BATCH_PIPELINE_REVIEW.md  CAPABILITY_ROBUSTNESS_REVIEW.md  CLAUDE.md  CONVERGENCE_STRATEGY.md  COST_OPTIMIZATION.md  DISCOVERY_COVERAGE_REVIEW.md  DISCOVERY_ROBUSTNESS_REVIEW.md  Dockerfile  Dockerfile.fastapi  EVAL_STRATEGY_REVIEW.md  GEMINI.md  REPORT_DESIGN_REVIEW.md  RESEARCH_AGENT_REVIEW.md  SCALING_UI_ACTIONS_PLAN.md  SCHEDULED_ACTIONS_REVIEW.md  debugScript.js  debugScript2.js  debugScript3.js  deploy.sh  entrypoint.sh  firestore.indexes.json  index.html  mkdocs.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  response.json  (+6 more)
admin/: .dockerignore  .gitignore  CLAUDE.md  deploy-fast.sh  package.json  playwright.config.ts  pyproject.toml  vitest.config.ts
admin/backend/: README.md  config.py  main.py  requirements.txt  types.py
admin/backend/evals/: conftest.py  run_all.py  test_agent_evals.py
admin/backend/lib/: adk_helpers.py  bigquery.py  bls_client.py  email.py  fda_client.py  firebase.py  forge_auth.py  model_fallback.py  osm_client.py  social_client.py  usda_client.py
admin/backend/orchestrators/: area_research.py  sector_research.py  zipcode_research.py
admin/backend/routers/: area_research.py  combined_context.py  content.py  cron.py  fixtures.py  food_prices.py  research_businesses.py  sector_research.py  stats.py  test_runner.py  workflow_actions.py  workflow_stream.py  workflows.py  zipcode_research.py
admin/backend/services/: test_runner.py
admin/backend/tests/: test_agents.py  test_api.py  test_bls_client.py  test_content_router.py  test_deep_research.py  test_discovery_pipeline.py  test_extended.py  test_food_prices_router.py  test_research_businesses.py  test_services.py  test_trends.py  test_usda_client.py
admin/backend/workflow/: engine.py
admin/docs/: FORGE_REQUIREMENTS.md
admin/infra/: Dockerfile.fastapi  Dockerfile.nextjs  cloudbuild-api.yaml  cloudbuild-web.yaml  deploy.sh  docker-compose.yml
admin/src/: middleware.ts
admin/src/app/: layout.tsx  page.tsx
admin/src/components/: BusinessBrowser.tsx  BusinessDiscovery.tsx  CombinedContextList.tsx  DashboardOverview.tsx  DiscoveryProgress.tsx  Scorecard.tsx  WorkflowDashboard.tsx  WorkflowHistory.tsx  ZipCodeResearchBrowser.tsx  ZipcodeResearch.tsx
agents/: pyproject.toml
agents/agent-catalog/: index.html
agents/hephae_agents/: __init__.py  market_data.py
agents/hephae_agents/business_overview/: agent.py  runner.py
agents/hephae_agents/business_profiler/: __init__.py  agent.py  runner.py
agents/hephae_agents/competitive_analysis/: __init__.py  agent.py  prompts.py  runner.py
agents/hephae_agents/discovery/: __init__.py  agent.py  batch_supervisor.py  county_resolver.py  directory_parser.py  dispatcher.py  locator.py  municipal_hubs.py  prompts.py  runner.py  zipcode_scanner.py
agents/hephae_agents/evaluators/: competitive_evaluator.py  margin_surgeon_evaluator.py  seo_evaluator.py  traffic_evaluator.py
agents/hephae_agents/insights/: insights_agent.py
agents/hephae_agents/margin_analyzer/: __init__.py  agent.py  prompts.py  runner.py  tools.py  visualizer.py
agents/hephae_agents/math/: calculation_engine.py
agents/hephae_agents/outreach/: communicator.py
agents/hephae_agents/profile_builder/: agent.py
agents/hephae_agents/qualification/: __init__.py  chains.py  scanner.py  threshold.py  tools.py
agents/hephae_agents/research/: ai_tool_scout.py  area_summary.py  context_combiner.py  demographic_expert.py  industry_analyst.py  industry_news.py  intel_fan_out.py  local_catalyst.py  local_sector_trends.py  maps_grounding.py  pulse_critique_agent.py  pulse_data_gatherer.py  pulse_domain_experts.py  pulse_orchestrator.py  reference_harvester.py  social_pulse.py  tech_scout.py  weekly_pulse_agent.py  zipcode_profile_discovery.py  zipcode_report_composer.py  zipcode_research.py
agents/hephae_agents/reviewer/: runner.py
agents/hephae_agents/seo_auditor/: __init__.py  agent.py  prompt.py  runner.py
agents/hephae_agents/shared_tools/: __init__.py  crawl4ai.py  google_search.py  playwright.py
agents/hephae_agents/social/: __init__.py
agents/hephae_agents/synthesis/: __init__.py  ai_tools_digest.py  industry_digest.py  research_digest.py  runner.py  zip_digest.py
agents/hephae_agents/traffic_forecaster/: __init__.py  agent.py  prompts.py  runner.py
agents/prompt-catalog/: index.html
apps/api/: CLAUDE.md  pyproject.toml
apps/api/backend/: __init__.py  config.py  main.py  run_discovery_batch.py  types.py
apps/api/hephae_api/: __init__.py  config.py  main.py  run_discovery_batch.py  types.py
apps/api/infra/: Dockerfile.fastapi  deploy-discovery-job.sh  deploy-eval-job.sh  deploy.sh  trigger-evals.sh
apps/batch/: pyproject.toml
apps/batch/hephae_batch/: __init__.py  main.py
apps/web/: .gitignore  CLAUDE.md  firestore.indexes.json  firestore.rules  package.json  pyproject.toml
apps/web/infra/: Dockerfile.nextjs  deploy.sh  docker-compose.yml
apps/web/scripts/: deploy-test-job.sh  sync-api-doc.py  trigger-cloud-tests.sh  upload_test_report.py
lib/common/: pyproject.toml
lib/common/hephae_common/: adk_callbacks.py  adk_helpers.py  (+14 more)
lib/db/: pyproject.toml
(+966 files in other folders)
