[project]
name = "hephae-admin-backend"
version = "0.1.0"
description = "Hephae Admin - Python FastAPI backend with Google ADK agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "google-adk>=1.0.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-bigquery>=3.27.0",
    "firebase-admin>=6.6.0",
    "resend>=2.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "sse-starlette>=2.2.0",
    "python-dotenv>=1.0.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "backend/evals"]
