[project]
name = "hephae-agents"
version = "0.1.0"
description = "Stateless AI agents with runner functions for hephae-forge"
requires-python = ">=3.12"
dependencies = [
    "hephae-common",
    "hephae-db",
    "hephae-integrations",
    "google-adk>=1.0.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.0",
    "playwright>=1.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hephae_agents"]
